--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,5 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="nl">
-<title>Sprint 11</title>
-<h1>Welkom in Sprint 11!</h1>
-<p>Succes!</p>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/script/styles/style.css">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
+    <script src="/script/script.js" defer></script>
+    
+    <title>bieb in bloei</title>
+  </head>
+  <body>
+    <!-- Je content komt hier -->
+
+    {% render 'partials/foot.liquid' %}
+  </body>
+</html>
