--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,5 +1,3 @@
-<!doctype html>
-<html lang="nl">
-<title>Sprint 11</title>
-<h1>Welkom in Sprint 11!</h1>
-<p>Succes!</p>
+{% render 'partials/head.liquid' %}
+
+{% render 'partials/foot.liquid' %}
