--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,2 +1,19 @@
 {% render 'partials/head.liquid' %}
+
+{% comment %} <!DOCTYPE html>
+<html lang="nl">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
+    <script src="./script/script.js" defer></script>
+   
+    <title>bieb in bloei</title>
+  </head>
+  <body>
+    <!-- Je content komt hier -->
+ 
+    {% render 'partials/foot.liquid' %}
+  </body> {% endcomment %}
+</html>
 {% render 'partials/foot.liquid' %}
