--- a/views/contact.liquid
+++ b/views/contact.liquid
@@ -1,5 +1,6 @@
 {% render 'partials/head.liquid', title: 'Contact' %}
 
+{% render 'partials/nav.liquid' %}
 
 
 {% render 'partials/foot.liquid' %}
