--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,5 +1,6 @@
 {% render 'partials/head.liquid' %}
 
+{% render 'partials/nav.liquid' %}
 {% comment %} <!DOCTYPE html>
 <html lang="nl">
   <head>
