#8 #1 Begonnen met homepagina workshops
- 404 toegevoegd
- Dynamische workshop data toegevoegd

--- a/public/style.css
+++ b/public/style.css
@@ -112,3 +112,11 @@ h1 {
 .nav-links details summary:hover {
     color: #ADD8E6;
 }
+
+.workshop-container {
+    padding: 2rem;
+}
+
+.workshop {
+    margin-top: 2rem;
+}
