--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -34,7 +34,7 @@
                     <summary>Projecten</summary>
                     <ul>
                         <li><a href="/">Stekjes</a></li>
-                        <li><a href="https://biebinbloei.nl/zaden">Zaden</a></li>
+                        <li><a href="/zaden/">Zaden</a></li>
                         <li><a href="https://biebinbloei.nl/geveltuin">Geveltuin</a></li>
                         <li><a href="https://biebinbloei.nl/groenebieb">Groenebieb</a></li>
                     </ul>
