--- a/views/index.liquid
+++ b/views/index.liquid
@@ -9,6 +9,7 @@
     <title>bieb in bloei</title>
   </head>
   <body>
+    {% render 'partials/article-card.liquid', title: 'BiB' %}
     <!-- Je content komt hier -->
 
     {% render 'partials/foot.liquid' %}
