--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -165,13 +165,6 @@ nav {
     text-align: left;
   }
 }
-
-
-.footer-content {
-
-/* =================== Hero =================== */
-
-/* =================== Hero =================== */
 .page-header {
   background: url("../assets/home-background.png") center/cover no-repeat;
 
@@ -205,7 +198,7 @@ nav {
   text-decoration: none;
   display: block;
 
-
+}
 
 /* =================== STEKJES BIEB =================== */
 /* =================== BIEB BLOK =================== */
