Navbar gefikst & animatie toegepast voor button #44 #30 #25
Navbar gefikst & animatie toegepast voor button. Ook defer erbij gezet #25  #44 #30 #25

--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -6,6 +6,8 @@
     <title>{{ page.title | default: "Standaard Titel" }}</title>
     <title>Bieb in Bloei</title>
     <link rel="stylesheet" href="/styles/style.css">
-    <script src="script.js"></script>
-</head>
+    <link rel="stylesheet" href="/styles/styleguide.css">
+    <script src="/script/script.js" defer></script>
 
+    
+</head>
