Button gemaakt voor contact pagina met een mooie animatie #44
Button gemaakt voor contact pagina met een mooie animatie #44

--- a/views/contact.liquid
+++ b/views/contact.liquid
@@ -31,7 +31,17 @@
       <label for="beschrijving">Beschrijving</label>
       <textarea id="beschrijving" name="beschrijving" required></textarea>
 
-      <button type="submit">Verzenden</button>
+      {% comment %} <button type="submit">Verzenden</button> {% endcomment %}
+
+
+
+      <button class="btn glow-on-hover">
+        <span class="circle">
+          <span class="arrow"></span>
+        </span>
+        <span class="text">Verzenden</span>
+      </button>
+
     </form>
   </section>
 </main>
