--- a/views/expiriment.liquid
+++ b/views/expiriment.liquid
@@ -19,3 +19,19 @@ Gezellig: Geveltuinen zorgen voor een meer sociale en betrokken buurt.</p>
 
 </body>
 </html>
+
+<style>
+body {
+        display: flex;
+        flex-direction: column;
+    }
+span {
+    color: #ff8d06;
+}
+article { 
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 1200px;
+}
