--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -577,12 +577,24 @@ body {
   text-decoration: none;
   font-size: 1rem;
   transition: padding 0.3s ease;
+  display: inline-block;
 }
 
 .contactlink-sascha:hover {
-  padding-bottom: 2.5em; 
+  padding-bottom: 2.5em;
 }
 
-.bloemetje.sascha {
+.bloemetje-sascha {
   position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease 0.3s;
+  width: 30px;
 }
+
+.contactlink-sascha:hover .bloemetje-sascha {
+  opacity: 1;
+}
+
