#40 Positie bloemetje beter

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -586,7 +586,7 @@ body {
 
 .bloemetje-sascha {
   position: absolute;
-  bottom: 0;
+  bottom: -0.5em;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
