--- a/views/contact.liquid
+++ b/views/contact.liquid
@@ -32,7 +32,7 @@
       <textarea id="beschrijving" name="beschrijving" required></textarea>
 
       {% comment %} <button type="submit">Verzenden</button> {% endcomment %}
-
+      <button class="glow-on-hover">Klik mij</button>
 
 
       <button class="btn glow-on-hover">
@@ -41,6 +41,7 @@
         </span>
         <span class="text">Verzenden</span>
       </button>
+      <button class="glow-on-hover">Klik mij</button>
 
     </form>
   </section>
