--- a/views/contact.liquid
+++ b/views/contact.liquid
@@ -31,18 +31,7 @@
       <label for="beschrijving">Beschrijving</label>
       <textarea id="beschrijving" name="beschrijving" required></textarea>
 
-      {% comment %} <button type="submit">Verzenden</button> {% endcomment %}
-      <button class="glow-on-hover">Klik mij</button>
-
-
-      <button class="btn glow-on-hover">
-        <span class="circle">
-          <span class="arrow"></span>
-        </span>
-        <span class="text">Verzenden</span>
-      </button>
-      <button class="glow-on-hover">Klik mij</button>
-
+      <button type="submit">Verzenden</button>
     </form>
   </section>
 </main>
