--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&family=Orbitron&family=Parkinsans:wght@300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Varela+Round&display=swap');
 
-/* Kerem & Sascha variables */
+/* Kerem, Nayome & Sascha variables */
 :root { 
         --main-color-green: #4e7141;
         --main-color-beige: #f9e9c2;
@@ -383,13 +383,269 @@ main {
     color: var(--main-color-green);
   }
 }
- 
+
+
+/* ========== PRIKBORD PAGINA ========== */
+
+/* HEADER */
+.body-project {
+  font-family: poppins;
+  background-color: var(--main-color-beige);
+}
+
+.header-project {
+  font-family: poppins;
+  height: 60vh;
+  padding: 2rem;
+  background-image: url('/assets/home-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.header-project h1 {
+  margin: 0.5rem 0;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: var(--font-weight-extra-bold);
+  color: var(--main-color-beige);
+}
+
+.header-project p {
+  margin: 1rem auto 0;
+  max-width: 90%;
+  font-size: 1em;
+  color: var(--main-color-beige);
+}
+
+
+/* MAIN (PROJECTEN SECTIE)*/
+.main-project {
+  margin-top: 3rem;
+}
+
+.project-cards ul {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 0;
+  list-style: none;
+  margin: 0 auto;
+}
+
+.project-cards li {
+  padding: 1rem;
+  width: 300px;
+  border-radius: 10px;
+  margin: 0 auto;
+  font-family: poppins;
+  background-color: var(--main-color-brown);
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.project-cards li:hover {
+  transform: scale(1.03);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
+}
+
+.project-cards h3 {
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 1.2em;
+  color: var(--main-color-beige);
+}
+
+.project-cards p {
+  font-size: 0.95em;
+  color: var(--main-color-beige);
+}
+
+.project-cards button {
+  display: block;
+  margin-top: auto; 
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 1rem; 
+  border: none;
+  padding: 0.8rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: poppins;
+  font-weight: var(--font-weight-extra-bold);
+  background-color: var(--main-color-orange);
+  color: var(--main-color-brown);
+}
+
+.project-cards li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  height: 100%; 
+}
+
+.project-cards button:hover {
+  background-color: var(--main-color-green);
+  color: var(--main-color-beige);
+}
+
+/* PROJECT FORMULIER */
+.project-toevoegen {
+  padding: 2rem var(--main-padding);
+  margin-top: 3rem;
+  color: var(--main-color-brown);
+  text-align: center;
+}
+
+.project-toevoegen h2 {
+  font-size: 2em;
+  margin-bottom: 2rem;
+  font-weight: var(--font-weight-extra-bold);
+  animation: slowZoomIn 3s forwards;
+
+  & span {
+    color: var(--main-color-orange);
+  }
+}
+
+.invul-form {
+  border-radius: 20px;
+  padding: 2rem;
+  max-width: 95%;
+  margin: 0 auto;
+  background-color: var(--main-color-brown);
+  animation: boxShadowPulse 2s infinite;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+.project-toevoegen form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.project-toevoegen label {
+  font-size: 1.2em;
+  text-align: left;
+  color: var(--main-color-beige);
+}
+
+.project-toevoegen input,
+.project-toevoegen textarea {
+  padding: 1rem;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--main-color-beige);
+  width: 100%;
+}
+
+textarea::placeholder,
+input::placeholder {
+  font-family: poppins;
+  color: var(--main-color-brown);
+}
+
+.project-toevoegen button {
+  margin-top: 1rem;
+  background-color: var(--main-color-orange);
+  color: var(--main-color-brown);
+  font-weight: var(--font-weight-extra-bold);;
+  padding: 1rem;
+  border-radius: 10px;
+  font-size: 1.1em;
+  cursor: pointer;
+  border: none;
+}
+
+.project-toevoegen button:hover {
+  background-color: var(--main-color-green);
+  color: var(--main-color-beige);
+}
+
+/* ANIMATIES */
+
+/*ZOOM IN ANIMATIE */
+@keyframes slowZoomIn {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+}
+
+  /* BOX SHADOW ANIMATIE */
+@keyframes boxShadowPulse {
+  0% {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  }
+  50% {
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.7);
+  }
+  100% {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  }
+}
+  
+  /* FADE IN ANIMATIE */
+  @keyframes fadeIn {
+	from {
+	  opacity: 0;
+	  transform: translateY(-10px);
+	}
+	to {
+	  opacity: 1;
+	  transform: translateY(0);
+	}
+  }
+  
+
 /* ========== RESPONSIVE ========== */
 
 @media (min-width: 769px) {
+ 
+  /*PRIKBORD DESKTOP*/
+  .header-project {
+    height: 60vh;
+  }
+
+.header-project h1 {
+  font-size: 4em;
+  margin-top: 50px;
+}
+
+.header-project p {
+  font-size: 1.2em;
+  margin-top: 50px;
+	max-width: 800px;
+}
+
+  .project-cards ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
+
+  .project-cards li {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .project-toevoegen h2 {
+    font-size: 3em;
+  }
+
+  .invul-form {
+    max-width: 800px;
+  }
+}
   .footer-content {
     flex-direction: row;
     justify-content: space-between;
   }
-}
+
 
