--- a/views/partials/nav.liquid
+++ b/views/partials/nav.liquid
@@ -26,7 +26,7 @@
                     <ul>
                         <li><a href="/">Stekjes</a></li>
                         <li><a href="https://biebinbloei.nl/zaden">Zaden</a></li>
-                        <li><a href="/geveltuin/">Geveltuin</a></li>
+                        <li><a href="/geveltuin">Geveltuin</a></li>
                         <li><a href="https://biebinbloei.nl/groenebieb">Groenebieb</a></li>
                     </ul>
                 </details>
