--- a/views/partials/nav.liquid
+++ b/views/partials/nav.liquid
@@ -31,7 +31,7 @@
                     </ul>
                 </details>
             </li>
-            <li><a href="https://biebinbloei.nl/agenda">Agenda</a></li>
+            <li><a href="/agenda/">Agenda</a></li>
             <li><a href="https://biebinbloei.nl/partners">Partners</a></li>
             <li><a href="https://biebinbloei.nl/over">Over</a></li>
             <li><a href="https://biebinbloei.nl/contact">Contact</a></li>
