--- a/views/agenda.liquid
+++ b/views/agenda.liquid
@@ -2,16 +2,26 @@
 {% render 'partials/nav.liquid', title: 'Agenda' %}
 
 <main>
+  <h1 class="h1-agenda">Agenda</h1>
 
+<section class="introtext-agenda">
   {% for tekstje in contentagenda %}
     <p>{{ tekstje.text }}</p>
   {% endfor %}
+</section>
 
+<h2 class="h2-agenda">Workshops</h2>
+<section class="introworkshops-agenda">
+{% for workshop in workshops %}
+  <p>{{ workshop.omschrijving }}</p>
+{% endfor %}
+</section>
+
+<section class="workshops-agenda">
   <ul>
     {% for workshop in workshops %}
       <li>
         <h1>{{ workshop.naam }}</h1>
-        <p>{{ workshop.omschrijving }}</p>
         <img src="https://fdnd-agency.directus.app/assets/{{ workshop.foto }}" alt="Geveltuin afbeelding" width="400px">
         <p>{{ workshop.kosten }}</p>
         <p>{{ workshop.locatie }}</p>
@@ -19,6 +29,7 @@
       </li>
     {% endfor %}
   </ul>
+</section>
 </main>
 
 {% render 'partials/foot.liquid' %}
